--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -1,6 +1,8 @@
 <%= page_header "Access Tokens" do %>
   <div class="d-flex align-items-center">
-    <%= link_to "New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
+    <% if policy(AccessToken).create? %>
+      <%= link_to "New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
+    <% end %>
     <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
@@ -51,14 +53,18 @@
               <%= link_to "Validate", settings_access_token_validation_path(access_token),
                           class: "text-decoration-none me-3",
                           data: { turbo_method: :post } %>
-              <%= link_to "Replace", edit_settings_access_token_path(access_token),
-                          class: "text-decoration-none me-3" %>
-              <%= link_to "Delete", settings_access_token_path(access_token),
-                          class: "text-danger text-decoration-none",
-                          data: {
-                            turbo_method: :delete,
-                            turbo_confirm: "Are you sure you want to delete '#{access_token.name}'? This action cannot be undone."
-                          } %>
+              <% if policy(access_token).update? %>
+                <%= link_to "Replace", edit_settings_access_token_path(access_token),
+                            class: "text-decoration-none me-3" %>
+              <% end %>
+              <% if policy(access_token).destroy? %>
+                <%= link_to "Delete", settings_access_token_path(access_token),
+                            class: "text-danger text-decoration-none",
+                            data: {
+                              turbo_method: :delete,
+                              turbo_confirm: "Are you sure you want to delete '#{access_token.name}'? This action cannot be undone."
+                            } %>
+              <% end %>
             </td>
           </tr>
         <% end %>
@@ -70,7 +76,9 @@
     <div class="card-body text-center py-5">
       <h5>No access tokens yet</h5>
       <p class="text-muted mb-4">Add Freefeed API access token to enable content reposting.</p>
-      <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary" %>
+      <% if policy(AccessToken).create? %>
+        <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary" %>
+      <% end %>
     </div>
   </div>
 <% end %>
