--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-12">
     <%= page_header "Feeds" do %>
-      <%= link_to "New Feed", new_feed_path, class: "btn btn-primary" %>
+      <% if policy(Feed).create? %>
+        <%= link_to "New Feed", new_feed_path, class: "btn btn-primary" %>
+      <% end %>
     <% end %>
 
     <% if @feeds.any? %>
@@ -46,7 +48,9 @@
       <div class="text-center py-5">
         <p>No feeds yet</p>
         <p class="text-muted">Create your first feed to start aggregating content.</p>
-        <%= link_to "Create Feed", new_feed_path, class: "btn btn-primary" %>
+        <% if policy(Feed).create? %>
+          <%= link_to "Create Feed", new_feed_path, class: "btn btn-primary" %>
+        <% end %>
       </div>
     <% end %>
   </div>
