--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Events" %>
 
 <%= page_header "Events" do %>
-  <% if @filter_query.present? %>
+  <% if @filter.present? %>
     <%= link_to "Reset Filter", admin_events_path, class: "btn btn-outline-secondary btn-sm" %>
   <% end %>
 <% end %>
@@ -23,7 +23,7 @@
         <% @events.each do |event| %>
           <tr>
             <td>
-              <%= link_to admin_events_path(filter_query: { type: event.type }),
+              <%= link_to admin_events_path(filter: { type: event.type }),
                           class: "text-decoration-none",
                           title: "Filter by type: #{event.type}" do %>
                 <code><%= event.type %></code>
@@ -42,7 +42,7 @@
             </td>
             <td>
               <% if event.subject %>
-                <%= link_to admin_events_path(filter_query: { subject_type: event.subject_type }),
+                <%= link_to admin_events_path(filter: { subject_type: event.subject_type }),
                             class: "text-decoration-none text-muted",
                             title: "Filter by subject type: #{event.subject_type}" do %>
                   <%= event.subject_type %>
@@ -68,7 +68,7 @@
       <ul class="pagination justify-content-center">
         <% if @current_page > 1 %>
           <li class="page-item">
-            <%= link_to "Previous", admin_events_path(page: @current_page - 1, filter_query: @filter_query), class: "page-link" %>
+            <%= link_to "Previous", admin_events_path(page: @current_page - 1, filter: @filter), class: "page-link" %>
           </li>
         <% else %>
           <li class="page-item disabled">
@@ -87,14 +87,14 @@
             </li>
           <% else %>
             <li class="page-item">
-              <%= link_to page, admin_events_path(page: page, filter_query: @filter_query), class: "page-link" %>
+              <%= link_to page, admin_events_path(page: page, filter: @filter), class: "page-link" %>
             </li>
           <% end %>
         <% end %>
 
         <% if @current_page < @total_pages %>
           <li class="page-item">
-            <%= link_to "Next", admin_events_path(page: @current_page + 1, filter_query: @filter_query), class: "page-link" %>
+            <%= link_to "Next", admin_events_path(page: @current_page + 1, filter: @filter), class: "page-link" %>
           </li>
         <% else %>
           <li class="page-item disabled">
