Update pagination partial to use each_page helper and ordinary params

--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -3,7 +3,7 @@
     <ul class="pagination justify-content-center">
       <% if pagination_current_page > 1 %>
         <li class="page-item">
-          <%= link_to "Previous", pagination_path.call(page: pagination_current_page - 1), class: "page-link" %>
+          <%= link_to "Previous", pagination_path.call(pagination_current_page - 1), class: "page-link" %>
         </li>
       <% else %>
         <li class="page-item disabled">
@@ -11,25 +11,21 @@
         </li>
       <% end %>
 
-      <% page_start = [pagination_current_page - 2, 1].max %>
-      <% page_end = [page_start + 4, pagination_total_pages].min %>
-      <% page_start = [page_end - 4, 1].max if page_end - page_start < 4 %>
-
-      <% (page_start..page_end).each do |page| %>
+      <% each_page(pagination_current_page, pagination_total_pages) do |page| %>
         <% if page == pagination_current_page %>
           <li class="page-item active">
             <span class="page-link"><%= page %></span>
           </li>
         <% else %>
           <li class="page-item">
-            <%= link_to page, pagination_path.call(page: page), class: "page-link" %>
+            <%= link_to page, pagination_path.call(page), class: "page-link" %>
           </li>
         <% end %>
       <% end %>
 
       <% if pagination_current_page < pagination_total_pages %>
         <li class="page-item">
-          <%= link_to "Next", pagination_path.call(page: pagination_current_page + 1), class: "page-link" %>
+          <%= link_to "Next", pagination_path.call(pagination_current_page + 1), class: "page-link" %>
         </li>
       <% else %>
         <li class="page-item disabled">
