--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -63,51 +63,9 @@
     </table>
   </div>
 
-  <% if @total_pages > 1 %>
-    <nav aria-label="Events pagination" class="mt-4">
-      <ul class="pagination justify-content-center">
-        <% if @current_page > 1 %>
-          <li class="page-item">
-            <%= link_to "Previous", admin_events_path(page: @current_page - 1, filter: @filter), class: "page-link" %>
-          </li>
-        <% else %>
-          <li class="page-item disabled">
-            <span class="page-link">Previous</span>
-          </li>
-        <% end %>
-
-        <% page_start = [@current_page - 2, 1].max %>
-        <% page_end = [page_start + 4, @total_pages].min %>
-        <% page_start = [page_end - 4, 1].max if page_end - page_start < 4 %>
-
-        <% (page_start..page_end).each do |page| %>
-          <% if page == @current_page %>
-            <li class="page-item active">
-              <span class="page-link"><%= page %></span>
-            </li>
-          <% else %>
-            <li class="page-item">
-              <%= link_to page, admin_events_path(page: page, filter: @filter), class: "page-link" %>
-            </li>
-          <% end %>
-        <% end %>
-
-        <% if @current_page < @total_pages %>
-          <li class="page-item">
-            <%= link_to "Next", admin_events_path(page: @current_page + 1, filter: @filter), class: "page-link" %>
-          </li>
-        <% else %>
-          <li class="page-item disabled">
-            <span class="page-link">Next</span>
-          </li>
-        <% end %>
-      </ul>
-
-      <div class="text-center text-muted">
-        Showing <%= @events.size %> of <%= @total_count %> events
-      </div>
-    </nav>
-  <% end %>
+  <%= pagination_for @events,
+                     collection_name: "events",
+                     path_helper: ->(page) { admin_events_path(page: page, filter: @filter) } %>
 <% else %>
   <div class="card">
     <div class="card-body text-center py-5 text-muted">
