--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,9 @@
               <li class="nav-item">
                 <%= link_to "Feeds", feeds_path, class: "nav-link #{'active' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
               </li>
+              <li class="nav-item">
+                <%= link_to "Posts", posts_path, class: "nav-link #{'active' if current_page?(posts_path) || controller_name == 'posts'}" %>
+              </li>
               <% if policy(Event).index? %>
                 <li class="nav-item">
                   <%= link_to "Admin Panel", admin_path, class: "nav-link #{'active' if current_page?(admin_path) || controller_name.start_with?('admin')}" %>
