Replace column titles with icons for Published, Attachments and Comments

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,9 +9,9 @@
             <tr>
               <th class="content-column">Content</th>
               <th class="feed-column">Feed</th>
-              <th class="published-column">Published</th>
-              <th class="count-column">Attachments</th>
-              <th class="count-column">Comments</th>
+              <th class="published-column"><i class="bi bi-calendar3"></i></th>
+              <th class="count-column"><i class="bi bi-paperclip"></i></th>
+              <th class="count-column"><i class="bi bi-chat-dots"></i></th>
               <th class="status-column">Status</th>
               <th class="source-column">Source</th>
               <th class="freefeed-column">FreeFeed</th>
