--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -143,7 +143,7 @@
               </td>
               <td class="source-column">
                 <% if post.source_url.present? %>
-                  <%= link_to "Src", post.source_url,
+                  <%= link_to "Source", post.source_url,
                               target: "_blank",
                               rel: "noopener",
                               title: "View original source" %>
@@ -153,7 +153,7 @@
               </td>
               <td class="freefeed-column">
                 <% if post.freefeed_post_id.present? %>
-                  <%= link_to "FF", "https://freefeed.net/#{@feed.target_group}/#{post.freefeed_post_id}",
+                  <%= link_to "Repost", "#{@feed.access_token.host}/#{@feed.target_group}/#{post.freefeed_post_id}",
                               target: "_blank",
                               rel: "noopener",
                               title: "View on FreeFeed" %>
